<resources>
    <string name="app_name">learngeo</string>
    <string name="question">This is question</string>
    <string name="question_true">you select is true</string>
    <string name="question_false">you select is false</string>
    <string name="ture">true</string>
    <string name="flse">false</string>
    <string name="nest">Next</string>
    <string name="question_1">This is question 1</string>
    <string name="question_2">This is question 2</string>
    <string name="question_3">This is question 3</string>
    <string name="question_4">This is question 4</string>
    <string name="question_5">This is question 6</string>
    <string name="question_6">This is question 7</string>
    <string name="last">Last</string>
    <string name="Cheat">Cheat</string>
    <string name="warning_text">Are you sure you</string>
    <string name="show_answer">Show Answer</string>
    <string name="judgment">Cheating is wrong</string>
</resources>
