<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center"
              android:orientation="vertical"
              tools:context="alex.learngeo.firstActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/show"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btntrue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ture"
            android:textSize="50dp"/>

        <Button
            android:id="@+id/btnfalse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/flse"
            android:textSize="50dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/last"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last"
            android:textSize="40dp"/>

        <Button
            android:id="@+id/nest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nest"
            android:textSize="40dp"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/Cheat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Cheat"
            android:textSize="35dp"/>
    </LinearLayout>
</LinearLayout>
